--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "**/.*"
   ],
   "dependencies": {
-    "ember": ">=1.2 <2"
+    "ember": ">=1.2 <2",
+    "route-recognizer": "https://raw.githubusercontent.com/tildeio/route-recognizer/fe8d680a6356d8c267cdc49846751e9a5b80945d/dist/route-recognizer.js"
   },
   "devDependencies": {
     "sinon": "http://sinonjs.org/releases/sinon-1.7.3.js"
