--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "ember friendly $.ajax wrapper",
   "main": "dist/cjs/main.js",
   "devDependencies": {
-    "broccoli": "^0.2.0",
-    "broccoli-dist-es6-module": "^0.1.8",
+    "broccoli": "^0.9.0",
     "broccoli-cli": "0.0.1",
     "karma": "^0.10.9",
     "karma-chrome-launcher": "^0.1.2",
@@ -15,7 +14,11 @@
     "karma-script-launcher": "^0.1.0",
     "qunitjs": "~1.12.0",
     "bower": "^1.2.8",
-    "rf-release": "^0.1.0"
+    "rf-release": "^0.1.0",
+    "broccoli-concat": "0.0.5",
+    "broccoli-es6-module-transpiler": "0.0.1",
+    "broccoli-globalize-amd": "0.0.3",
+    "broccoli-merge-trees": "^0.1.3"
   },
   "scripts": {
     "test": "node_modules/.bin/bower install && rm -rf dist && node_modules/.bin/broccoli build dist && node_modules/.bin/karma start --browsers Firefox --single-run",
