--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "qd-ajax",
   "version": "1.1.0",
-  "description": "ember friendly $.ajax wrapper",
-  "main": "lib/concat-fixtures",
+  "description": "Ember friendly $.ajax wrapper with extended fixtures support",
+  "main": "dist/node/main.js",
   "devDependencies": {
     "broccoli": "^0.9.0",
     "broccoli-cli": "0.0.1",
@@ -43,6 +43,7 @@
     "broccoli-merge-trees": "^0.1.3",
     "broccoli-es6-concatenator": "^0.1.4",
     "quick-temp": "^0.1.1",
-    "fixturify": "^0.1.1"
+    "fixturify": "^0.1.1",
+    "broccoli-file-mover": "^0.2.0"
   }
 }
