--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "qd-ajax",
-  "version": "1.0.4",
+  "version": "1.1.1",
   "authors": [
+    "Taras Mankovski<tarasm@gmail.com>",
     "Ryan Florence <rpflorence@gmail.com>"
   ],
   "license": "MIT",
