--- a/package.json
+++ b/package.json
@@ -3,8 +3,35 @@
   "version": "1.4.0",
   "description": "Ember friendly $.ajax wrapper with extended fixtures support",
   "main": "dist/node/main.js",
+  "scripts": {
+    "test": "node_modules/.bin/bower install && rm -rf dist && node_modules/.bin/broccoli build dist && node_modules/.bin/karma start --browsers Firefox --single-run",
+    "release": "npm test && node_modules/.bin/release"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/quandl/qd-ajax.git"
+  },
+  "keywords": [
+    "ember",
+    "ajax",
+    "ember-addon"
+  ],
+  "author": "Taras Mankovski (forked from ic-ajax by Ryan Florence)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/quandl/qd-ajax/issues"
+  },
+  "homepage": "https://github.com/quandl/qd-ajax",
+  "dependencies": {
+    "broccoli-static-compiler": "^0.1.4",
+    "broccoli-merge-trees": "^0.1.3",
+    "broccoli-es6-concatenator": "^0.1.6",
+    "quick-temp": "^0.1.1",
+    "fixturify": "^0.1.1",
+    "broccoli-file-mover": "^0.2.0"
+  },
   "devDependencies": {
-    "broccoli": "^0.9.0",
+    "broccoli": "0.12.3",
     "broccoli-cli": "0.0.1",
     "karma": "^0.10.9",
     "karma-chrome-launcher": "^0.1.2",
@@ -19,31 +46,5 @@
     "broccoli-es6-module-transpiler": "0.0.1",
     "broccoli-globalize-amd": "0.0.3",
     "broccoli-merge-trees": "^0.1.3"
-  },
-  "scripts": {
-    "test": "node_modules/.bin/bower install && rm -rf dist && node_modules/.bin/broccoli build dist && node_modules/.bin/karma start --browsers Firefox --single-run",
-    "release": "npm test && node_modules/.bin/release"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/quandl/qd-ajax.git"
-  },
-  "keywords": [
-    "ember",
-    "ajax"
-  ],
-  "author": "Taras Mankovski (forked from ic-ajax by Ryan Florence)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/quandl/qd-ajax/issues"
-  },
-  "homepage": "https://github.com/quandl/qd-ajax",
-  "dependencies": {
-    "broccoli-static-compiler": "^0.1.4",
-    "broccoli-merge-trees": "^0.1.3",
-    "broccoli-es6-concatenator": "^0.1.4",
-    "quick-temp": "^0.1.1",
-    "fixturify": "^0.1.1",
-    "broccoli-file-mover": "^0.2.0"
   }
 }
