--- a/package.json
+++ b/package.json
@@ -28,22 +28,23 @@
     "broccoli-es6-concatenator": "^0.1.6",
     "quick-temp": "^0.1.1",
     "fixturify": "^0.1.1",
-    "broccoli-file-mover": "^0.2.0"
+    "broccoli-file-mover": "^0.3.5"
   },
   "devDependencies": {
     "broccoli": "0.12.3",
     "broccoli-cli": "0.0.1",
-    "karma": "^0.10.9",
-    "karma-chrome-launcher": "^0.1.2",
+    "karma": "^0.12.16",
+    "karma-cli": "0.0.4",
+    "karma-chrome-launcher": "^0.1.4",
     "karma-firefox-launcher": "^0.1.3",
     "karma-html2js-preprocessor": "^0.1.0",
-    "karma-qunit": "^0.1.1",
+    "karma-qunit": "^0.1.3",
     "karma-script-launcher": "^0.1.0",
-    "qunitjs": "~1.12.0",
-    "bower": "^1.2.8",
-    "rf-release": "^0.1.0",
-    "broccoli-concat": "0.0.5",
-    "broccoli-es6-module-transpiler": "0.0.1",
+    "qunitjs": "~1.14.0",
+    "bower": "^1.3.5",
+    "rf-release": "^0.1.2",
+    "broccoli-concat": "0.0.6",
+    "broccoli-es6-module-transpiler": "0.1.1",
     "broccoli-globalize-amd": "0.0.3",
     "broccoli-merge-trees": "^0.1.3"
   }
