--- a/package.json
+++ b/package.json
@@ -1,52 +1,40 @@
 {
   "name": "qd-ajax",
-  "version": "1.5.3",
-  "description": "Ember friendly $.ajax wrapper with extended fixtures support",
-  "main": "dist/node/main.js",
-  "ember-addon-main": "dist/node/ember-cli-qd-ajax",
-  "scripts": {
-    "test": "node_modules/.bin/bower install && rm -rf dist && node_modules/.bin/broccoli build dist && node_modules/.bin/karma start --browsers Firefox --single-run",
-    "release": "npm test && node_modules/.bin/release"
+  "version": "0.0.0",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/quandl/qd-ajax.git"
+  "main": "index.js",
+  "scripts": {
+    "start": "ember server",
+    "build": "ember build",
+    "test": "ember test"
+  },
+  "repository": "https://github.com/stefanpenner/ember-cli",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "body-parser": "^1.2.0",
+    "broccoli-asset-rev": "0.3.1",
+    "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "ember-cli": "0.1.2",
+    "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.1.0",
+    "ember-data": "1.0.0-beta.10",
+    "ember-export-application-global": "^1.0.0",
+    "express": "^4.8.5",
+    "glob": "^4.0.5"
   },
   "keywords": [
-    "ember",
-    "ajax",
     "ember-addon"
   ],
-  "author": "Taras Mankovski (forked from ic-ajax by Ryan Florence)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/quandl/qd-ajax/issues"
-  },
-  "homepage": "https://github.com/quandl/qd-ajax",
-  "dependencies": {
-    "broccoli-static-compiler": "^0.1.4",
-    "broccoli-merge-trees": "^0.1.3",
-    "broccoli-es6-concatenator": "^0.1.6",
-    "quick-temp": "^0.1.1",
-    "fixturify": "^0.1.1",
-    "broccoli-file-mover": "^0.3.5"
-  },
-  "devDependencies": {
-    "broccoli": "0.12.3",
-    "broccoli-cli": "0.0.1",
-    "karma": "^0.12.16",
-    "karma-cli": "0.0.4",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-html2js-preprocessor": "^0.1.0",
-    "karma-qunit": "^0.1.3",
-    "karma-script-launcher": "^0.1.0",
-    "qunitjs": "~1.14.0",
-    "bower": "^1.3.5",
-    "rf-release": "^0.1.2",
-    "broccoli-concat": "0.0.6",
-    "broccoli-es6-module-transpiler": "0.1.1",
-    "broccoli-globalize-amd": "0.0.3",
-    "broccoli-merge-trees": "^0.1.3"
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
   }
 }
